--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "392 Rows, 9 columns"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "The variable type is float because the data in the model is composed on decimals and continuous valued."
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here... "
+    "The rows with the greatest 116, 95, 13, 8, 6"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "We have 8 predictors"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "id": "f67e57ab",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "Positive Association: Acceleration ; Negative Association:Displacement, Horsepower, Weight ; No association: Cylinders, Model_year"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "id": "843f9eef",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "Linear Regression"
    ]
   },
   {
@@ -257,7 +257,7 @@
    "id": "2ea782fc",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "No because this model uses data to predict and assume other data which is not accurate when it comes to real life. Sometimes we have noises or we have exceptional events that might occur. The deviations are used to measure how valid our model is, the less the deviations are the better"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here..."
+    "Training set size: 294 rows; Test set size: 98 rows"
    ]
   },
   {
@@ -297,9 +297,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here ...\n",
+    "lm = LinearRegression();\n",
+"lm.fit(X_train, y_train)\n",
     "\n",
-    "numeric_predictors = 🤷‍♂️\n",
+    "numeric_predictors = X_train\n",
     "\n",
     "\n",
     "# Create a DataFrame containing the slope (coefficients) and intercept\n",
