--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -82,7 +82,9 @@
     "# Display the DataFrame\n",
     "print(iris_df)\n",
     "\n",
-    "# Your code here..."
+    "num_rows, num_columns = iris_df.shape\n",
+"print\n",
+"\n"
    ]
   },
   {
