--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -167,7 +167,7 @@
    "id": "35308e2c",
    "metadata": {},
    "source": [
-    "> Your answer..."
+    "A pattern is seen between petal length and petal width, showing a positive correlation, with 2 or 3 distinct clusters forming. This separation can help distinguish species when we compare species with smaller petal dimensions and other species with large values of petal length and with.  Sepal values show overlap between species rather than distinctions."
    ]
   },
   {
@@ -212,7 +212,7 @@
    "id": "53d77d5c",
    "metadata": {},
    "source": [
-    "> Your answer here ... "
+    "Standardizing data is very important prior clustering to ensure that all features contribute equally to the distance calculations, preventing any single feature from dominating the results due to its scale."
    ]
   },
   {
@@ -233,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer...\n",
+    "The method commonly used is the Elbow method, where the total WSSD versus the number of clusters, often shows an “elbow” shape indicating the optimal number of clusters where the WSSD decrease levels off. This method is helpful because it helps us visualize the relation between number of clusters and WSSD and then to choose where the decrease becomes less. \n",
     "\n",
     "clustered_iris_data = 🤷‍♂️\n",
     "\n",
