--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -257,7 +257,7 @@
    "id": "83349688",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "The method commonly used is the Elbow method, where the total WSSD versus the number of clusters, often shows an “elbow” shape indicating the optimal number of clusters where the WSSD decrease levels off. This method is helpful because it helps us visualize the relation between number of clusters and WSSD and then to choose where the decrease becomes less."
    ]
   },
   {
