--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -235,7 +235,7 @@
    "source": [
  
     "\n",
-    "clustered_iris_data = 🤷‍♂️\n",
+    "clustered_iris_data = 3\n",
     "\n",
     "\n",
     "# Use the helper function to plot scatter plots, colored by cluster labels\n",
