--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -306,7 +306,7 @@
    "id": "16a6e104",
    "metadata": {},
    "source": [
-    ">  Your answer..."
+    "Boostrapping is used in this context to test the reliability of the clustering results. It helps use to understand if the mean of our sample is within the confidence interval."
    ]
   },
   {
@@ -323,7 +323,7 @@
    "id": "e5be82ec",
    "metadata": {},
    "source": [
-    "> Your answer..."
+    "The confidence interval will tell us how likely we were able to estimate the true parameters and if our estimates were precise. If it’s 95% it’s a good sign and it means that 95 of the calculated intervals would include true population parameters."
    ]
   },
   {
@@ -341,7 +341,7 @@
    "id": "0a7e6778",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "The mean of the Petal Width appears to be a stable and reliable estimate since the confidence interval is as high as 90%."
    ]
   },
   {
